
Improved sprite viewer: 
* now can see sprites with speccy screen format
* you can view sprites up to 512x192 
* you can see tsconf sprites

Improved TBBlue emulation: 
* Added clip window registers
* Added Copper
* Added almost all next extended opcodes
* Added a setting to start TBBlue directly to a 48 rom but with all the Next features enabled, useful for fast snapshot loading

Improved text mode drivers (aalib, stdout, simpletext, curses): text settings are in different submenu, setting to set stdout/simpletext fps
Improved messages windows. You can now have an internal clipboard, press key c to copy to it. Press P on file utils to paste contents to a file
Improved frameskip: better performance, because realvideo buffer is not updated when frameskip
Improved sound: Silence detector activated by default but can be disabled
Improved default configuration: when the configuration file doesn't exist, the new one has the autosave configuration setting enabled
Improved configuration parsing: if unknown setting found on configuration file, ZEsarUX will open but warns about the error, and the autosave feature is not enabled
Improved rendering on text mode drivers: now realvideo mode can render directly to black&white text. Try TSConf with --vo stdout --realvideo --autoredrawstdout
Improved Linux library dependencies: libssl is not enabled by default on compilation

Fixed ZX-Uno emulation: 
* 128kb timings are the same as a Spectrum 128k. When port 1ffd enabled, port FF return FF
* Kempston port returns 0 when no kempston selected. New BIOS can be used now

Fixed TBBlue MMU when using segment 0000-3FFFH
Fixed Raster interrupts on ZX-Uno and TBBlue. Horizontal raster position was wrong
Fixed window footer when running Pentagon
Fixed panic screen: now it is shown on all machines. New design. I hope you never see it ;)
Fixed some crashes with speech enabled and opening some menus: AY Registers, AY Player, etc...
Fixed annoying sound on Dandanator rom menu